feat: Add QR ticketing, email notifications, and admin refund system